<resources>
    <string name="app_name">Cool Timer</string>
    <string name="start_label">START</string>
    <string name="stop_label">STOP</string>
    <string name="sound_bell">Bell</string>
    <string name="sound_ring">Ring</string>
    <string name="sound_ring_w">Ring 2</string>
    <string name="enable_sound_setting">Enable Sound</string>
    <string name="sound_disabled_value">Sound Disabled</string>
    <string name="sound_enabled_value">Sound Enabled</string>
    <string name="timer_melody">Timer Melody</string>
    <string name="default_interval">Default Interval (sec.)</string>
    <string name="interval_between_msg">Default interval must be between 0 and 600!!!</string>
    <string name="interval_must_be_integer">Please, enter integer value!!!</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="enable_animation_setting">Enable animation</string>
    <string name="animation_enabled_value">Animation Enabled</string>
    <string name="animation_disabled_value">Animation Disabled</string>
</resources>
