<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="enable_sound"
        android:summaryOff="@string/sound_disabled_value"
        android:summaryOn="@string/sound_enabled_value"
        android:title="@string/enable_sound_setting" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="enable_animation"
        android:summaryOff="@string/animation_disabled_value"
        android:summaryOn="@string/animation_enabled_value"
        android:title="@string/enable_animation_setting" />

    <ListPreference
        android:defaultValue="ring"
        android:entries="@array/pref_timer_melody_labels"
        android:entryValues="@array/pref_timer_melody_values"
        android:key="timer_melody"
        android:title="@string/timer_melody" />

    <EditTextPreference
        android:defaultValue="30"
        android:key="default_interval"
        android:title="@string/default_interval" />
</PreferenceScreen>